# quickapp-desktop

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
framework/: framework.cpp  framework.h
gui/: drawable.h  window.cpp  window.h
quickjs/: CMakeLists.txt
